# cakecutter

./: .gitignore  Cargo.toml
src/: cakecutter.rs  errors.rs  generate.rs  main.rs  template.rs  user_config.rs
