[package]
name = "cakecutter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive", "string"] }
colog = "1.3.0"
crossterm = "0.28.1"
git2 = "0.19.0"
log = { version = "0.4.22", features = ["kv"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
tera = "1.20.0"
thiserror = "2.0.5"
url = "2.5.4"
walkdir = "2.5.0"
yash-fnmatch = "1.1.1"
